// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a label correctly 1`] = `
<View
  style={undefined}
>
  <View
    style={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          undefined,
        ]
      }
    >
      Ermahgerd Berks
    </Text>
  </View>
  <View
    style={undefined}
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      keyboardType="default"
      onChangeText={undefined}
      returnKeyType="done"
      secureTextEntry={false}
      style={undefined}
      underlineColorAndroid="white"
    />
  </View>
</View>
`;

exports[`renders password fields (using secureTextEntry) 1`] = `
<View
  style={undefined}
>
  <View
    style={undefined}
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      keyboardType="default"
      onChangeText={undefined}
      returnKeyType="done"
      secureTextEntry={true}
      style={undefined}
      underlineColorAndroid="white"
    />
  </View>
</View>
`;

exports[`renders with no label 1`] = `
<View
  style={undefined}
>
  <View
    style={undefined}
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      keyboardType="default"
      onChangeText={undefined}
      returnKeyType="done"
      secureTextEntry={false}
      style={undefined}
      underlineColorAndroid="white"
    />
  </View>
</View>
`;
